--- a/src/assets/styles/base/_profile.scss
+++ b/src/assets/styles/base/_profile.scss
@@ -106,13 +106,14 @@
       }
       .info-container {
         .title {
-          margin-bottom: 5px;
+          margin-bottom: 10px;
           font-size: 20px;
         }
         .body-wrapper {
           .body-item-wrapper {
             display: flex;
             align-items: center;
+            min-height: 60px;
             &:last-child {
               .item-content {
                 border-bottom: none;
@@ -135,7 +136,7 @@
               flex: 1 1 auto;
               margin-left: 20px;
               font-size: 15px;
-              padding: 10px 0 15px;
+              // padding: 10px 0 15px;
               // border-bottom: 1px solid $gray;
               .title {
                 margin-bottom: 0;
