- implemented avatarUploading feature

--- a/src/app/shared/components/avatar-cropper/avatar-cropper.component.html
+++ b/src/app/shared/components/avatar-cropper/avatar-cropper.component.html
@@ -9,6 +9,7 @@
         [resizeToWidth]="200"
         (imageCroppedBase64)="imageCropped($event)"
         (imageCropped)="imageCropped($event)"
+        (imageCroppedFile)="imageCroppedFile($event)"
         (imageLoaded)="imageLoaded()"
         (loadImageFailed)="loadImageFailed()">
       </image-cropper>
