--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
@@ -15,7 +15,7 @@
       <div class="profile-image-container">
         <span class="profile-title">Profile Photo</span>
         <div *ngIf="croppedImage; else elseBlock" class="avatar-container">
-          <img [src]="croppedImage">
+          <img class="avatar" [src]="croppedImage">
           <span class="edit-icon">
             <i class="fa fa-pencil"></i>
           </span>
