--- a/src/app/layout/search/search-input/search-input.component.html
+++ b/src/app/layout/search/search-input/search-input.component.html
@@ -1,4 +1,4 @@
 <form [formGroup]="searchForm">
   <input type="text" class="form-control" name="search" [(ngModel)]="searchValue" formControlName="searchTerm">
 </form>
-<dsod-search-results [searchTerm]="searchValue" *ngIf="searchValue && isOpen"></dsod-search-results>
+<dsod-search-results [searchTerm]="searchForm.controls.searchTerm.valueChanges" *ngIf="searchValue && isOpen"></dsod-search-results>
