made changes to sponsors section and fixed podcast author component

--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -4,7 +4,7 @@
     <div class="col-lg-6">
       <div class="our-sponsors">
         <div class="our-sponsors-header">
-          <!-- <h4 *ngIf="topic.sponsorName==='ALN'">
+          <h4 *ngIf="topic.sponsorName==='ALN'">
             <img src="assets/images/align-logo.png" alt="">
             Sponsored content from Align Technology, Inc.
           </h4>
@@ -13,12 +13,8 @@
             Sponsored content from Nobel Biocare, N.A.
           </h4>
           <h4 *ngIf="topic.sponsorName==='GSK'">
-            <img src="assets/images/gsk-icon.png" alt="">
+            <img src="assets/images/gsk-icon-sm.png" alt="">
             Sponsored content from GlaxoSmithKline
-          </h4> -->
-          <h4>
-            <img src="assets/images/align-logo.png" alt="">
-            Sponsored content from Align Technology, Inc.
           </h4>
         </div>
         <dsod-topic [topic]="topic" [showImage]="false" styleFor="content-lg" [showHeader]="false"></dsod-topic>
