--- a/src/app/shared/components/author/author.component.html
+++ b/src/app/shared/components/author/author.component.html
@@ -3,6 +3,6 @@
     <img src="assets/images/speaker-avi.png" class="img-fluid" alt="">
   </div>
   <div class="speaker-name">
-    <span>{{author.firstName}} {{author.lastName}}, {{author.role}}</span>
+    <span>{{author.firstName}} {{author.lastName}}</span>
   </div>
 </div>
