--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -1,6 +1,6 @@
 <h2 class="section-title">From Our Sponsors </h2>
 <div class="row">
-  <div class="row" *ngFor="let topic of sponsoredTopics | contentFilter">
+  <div class="row" *ngFor="let topic of sponsoredTopics | slice:0:3">
     <div class="col-lg-6">
       <div class="our-sponsors">
         <div class="our-sponsors-header">
