--- a/src/app/pages/home/components/podcasts-by/podcasts-by.component.html
+++ b/src/app/pages/home/components/podcasts-by/podcasts-by.component.html
@@ -1,14 +1,18 @@
-<div class="featured-podcasts-block-sm">
-  <div class="podcasts-block-header">
-    <h4>Orthodontics</h4>
-  </div>
-  <div class="podcast-block-thumbnail">
-    <img src={{author.imageUrl}} class="img-fluid" alt="Feautred Thumbnail Large">
-    <div class="podcasts-block-caption">
-      <h4>Treatment of Type III Sockets</h4>
+<div class="row">
+  <div class="col-sm-4" *ngFor="let podcast of podcasts | slice:indexStart:indexEnd; let i=index">
+    <div class="featured-podcasts-block-sm" *ngIf="podcasts" [routerLink]="['./podcast', podcast.id,'author',authors[i+imageIndex].id]">
+      <div class="podcasts-block-header">
+        <h4>{{podcast.categoryName}}</h4>
+      </div>
+      <div class="podcast-block-thumbnail">
+        <img src={{authors[i+imageIndex].imageUrl}} class="img-fluid" alt="Feautred Thumbnail Large">
+        <div class="podcasts-block-caption">
+          <h4>{{podcast.title}}</h4>
+        </div>
+      </div>
+      <div class="podcast-block-content">
+        <h3>{{podcast.author.firstName}} {{podcast.author.lastName}}</h3>
+      </div>
     </div>
-  </div>
-  <div class="podcast-block-content">
-    <h3>{{author.name}}, RDH, MS</h3>
   </div>
 </div>
