--- a/src/app/pages/home/components/podcasts-by/podcasts-by.component.scss
+++ b/src/app/pages/home/components/podcasts-by/podcasts-by.component.scss
@@ -3,6 +3,7 @@
 .featured-podcasts-block-sm {
   max-width: 230px;
   margin: 15px auto;
+  cursor: pointer;
 
   .podcasts-block-header {
     padding: 21px 15px 9px;
@@ -10,7 +11,7 @@
 
     h4 {
       color: $color-primary;
-      font-size: 22px;
+      font-size: 20px;
     }
   }
 
@@ -26,6 +27,9 @@
       background: $dark_grey;
       padding: 5px 15px;
       text-align: center;
+      height: 70px;
+      display: flex;
+      align-items: center;
 
       h4 {
         color: $color-white;
