--- a/src/app/pages/home/components/podcasts/podcasts.component.html
+++ b/src/app/pages/home/components/podcasts/podcasts.component.html
@@ -1,4 +1,4 @@
-<section class="podcasts">
+<section class="podcasts" *ngIf="(podcasts$ | async)?.length">
   <div class="container">
     <h2 class="section-title">Podcasts</h2>
     <div class="podcasts-about text-center">
@@ -9,10 +9,10 @@
       <h3 class="podcasts-title">Podcasts</h3>
       <tabset>
         <tab heading="New" class="mt-2">
-          <a href="javascript:void(0)" class="pod-left-control" (click)="updateAuthors()">
+<a href="javascript:void(0)" class="pod-left-control" (click)="updateAuthors($event)">
             <img src="assets/images/arrow-left.png" alt="">
           </a>
-          <a href="javascript:void(0)" class="pod-right-control" (click)="updateAuthors()">
+          <a href="javascript:void(0)" class="pod-right-control" (click)="updateAuthors($event)">
             <img src="assets/images/arrow-right.png" alt="">
           </a>
           <div class="row">
@@ -29,23 +29,19 @@
                 </div>
               </div>
               <div class="podcasts-list">
-                <dsod-podcast-items [podcasts]="podcasts$ | async"></dsod-podcast-items>
+<dsod-podcast-items [podcasts]="podcasts$ | async" [indexStart]="indexStart" [indexEnd]="indexEnd" [imageIndex]="imageIndex"></dsod-podcast-items>
               </div>
             </div>
             <div class="col-xl-6">
-              <div class="row">
-                <div class="col-sm-4" *ngFor="let author of authors | slice:indexStart:indexEnd">
-                  <dsod-podcasts-by [author]="author"></dsod-podcasts-by>
+<dsod-podcasts-by [podcasts]="podcasts$ | async" [indexEnd]="indexEnd" [indexStart]="indexStart" [imageIndex]="imageIndex"></dsod-podcasts-by>
                 </div>
-              </div>
-            </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <div class="podcasts-pagination">
                 <ul>
                   <li *ngFor="let number of [1, 2]; let i=index" [ngClass]="{'active':number==activePage}"><button
-                      class="btn btn-default" (click)="podcastPagination($event, number)">{{number}}</button></li>
+                      class="btn btn-default" (click)="podcastPagination($event, number)" [disabled]="number==activePage">{{number}}</button></li>
                 </ul>
               </div>
             </div>
