--- a/src/app/pages/podcast/components/play-list/play-list.component.scss
+++ b/src/app/pages/podcast/components/play-list/play-list.component.scss
@@ -33,6 +33,12 @@ ul {
         padding-right: 20px;
         border-right: 1px solid $text_main;
         margin-right: 15px;
+
+        >img {
+          height: 60px;
+          width: 60px;
+          object-fit: cover;
+        }
       }
 
       &.pod-time {
