--- a/src/app/pages/video/components/video-player/video-player.component.scss
+++ b/src/app/pages/video/components/video-player/video-player.component.scss
@@ -5,6 +5,13 @@
     margin-bottom: 55px;
     position: relative;
 
+    div {
+      /deep/ iframe {
+        position: relative !important;
+        height: 675px !important;
+      }
+    }
+
     video {
       width: 100%;
 
