- fixed residency issue

--- a/src/app/shared/components/edit-residency/edit-residency.component.html
+++ b/src/app/shared/components/edit-residency/edit-residency.component.html
@@ -5,7 +5,7 @@
       <ng-select
         class="custom-select"
         [items]="residencyList"
-        [(ngModel)]="residency.residency_School.id"
+        [(ngModel)]="residency.residency_school.id"
         appendTo="body"
         bindLabel="name"
         bindValue="id"
