- fixed scrollbar width

--- a/src/assets/styles/base/_profile.scss
+++ b/src/assets/styles/base/_profile.scss
@@ -28,6 +28,9 @@
     }
   }
   .profile-body {
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
     height: calc(100% - 67px);
     overflow-y: auto;
     .section-container {
