--- a/src/app/pages/podcast/containers/podcast-page.component.scss
+++ b/src/app/pages/podcast/containers/podcast-page.component.scss
@@ -119,6 +119,7 @@
     height: 1006px;
     position: relative;
     border: 3px solid $light_grey;
+    margin-bottom: 30px;
 
     .join-ad-header {
       padding: 15px;
