- fixed bookmark service

--- a/src/app/pages/podcast/containers/podcast-page.component.html
+++ b/src/app/pages/podcast/containers/podcast-page.component.html
@@ -13,7 +13,7 @@
               <dsod-audio-player [content]="pageContent$ | async"></dsod-audio-player>
             </div>
             <div class="col-lg-2">
-              <dsod-content-actions></dsod-content-actions>
+              <dsod-content-actions [content]="pageContent$ | async"></dsod-content-actions>
             </div>
           </div>
         </div>
