--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -1,33 +1,36 @@
 <h2 class="section-title">From Our Sponsors </h2>
 <div class="row">
-  <div class="row" *ngFor="let topic of sponsoredTopics | slice:0:3">
-    <div class="col-lg-6">
-      <div class="our-sponsors">
-        <div class="our-sponsors-header">
-          <h4 *ngIf="topic.sponsorName==='ALN'">
-            <img src="assets/images/align-logo.png" alt="">
-            Sponsored content from Align Technology, Inc.
-          </h4>
-          <h4 *ngIf="topic.sponsorName==='NBL'">
-            <img src="assets/images/nb-logo.png" alt="">
-            Sponsored content from Nobel Biocare, N.A.
-          </h4>
-          <h4 *ngIf="topic.sponsorName==='GSK'">
-            <img src="assets/images/gsk-icon-sm.png" alt="">
-            Sponsored content from GlaxoSmithKline
-          </h4>
+  <div class="col-md-12" *ngFor="let topic of sponsoredTopics | slice:0:3">
+
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="our-sponsors">
+          <div class="our-sponsors-header">
+            <h4 *ngIf="topic.sponsorName==='ALN'">
+              <img src="assets/images/align-logo.png" alt="">
+              Sponsored content from Align Technology, Inc.
+            </h4>
+            <h4 *ngIf="topic.sponsorName==='NBL'">
+              <img src="assets/images/nb-logo.png" alt="">
+              Sponsored content from Nobel Biocare, N.A.
+            </h4>
+            <h4 *ngIf="topic.sponsorName==='GSK'">
+              <img src="assets/images/gsk-icon-sm.png" alt="">
+              Sponsored content from GlaxoSmithKline
+            </h4>
+          </div>
+          <dsod-topic [topic]="topic" [showImage]="false" styleFor="content-lg" [showHeader]="false"></dsod-topic>
         </div>
-        <dsod-topic [topic]="topic" [showImage]="false" styleFor="content-lg" [showHeader]="false"></dsod-topic>
       </div>
-    </div>
-    <div class="col-lg-6">
-      <section class="sponsors-ortho">
-        <div>
-          <dsod-media-content title="implant Dentisty" [placeholderImageSrc]="topic.featuredMedia.code.originalUrl"
-            [title]="topic.categoryName">
-          </dsod-media-content>
-        </div>
-      </section>
+      <div class="col-lg-6">
+        <section class="sponsors-ortho">
+          <div>
+            <dsod-media-content title="implant Dentisty" [placeholderImageSrc]="topic.featuredMedia.code.originalUrl"
+              [title]="topic.categoryName">
+            </dsod-media-content>
+          </div>
+        </section>
+      </div>
     </div>
   </div>
 </div>
