--- a/src/app/pages/podcast/components/podcast-tabs/podcast.tabs.component.scss
+++ b/src/app/pages/podcast/components/podcast-tabs/podcast.tabs.component.scss
@@ -8,6 +8,9 @@
   margin: 50px 0;
   position: relative;
 
+/deep/ .tab-container{
+  width:100%;
+}
   h3.podcasts-title {
     font-size: 28px;
     font-weight: 300;
