--- a/src/app/pages/preview/components/article-preview.component.html
+++ b/src/app/pages/preview/components/article-preview.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="content">
   <div class="article-header mt-5">
     <div class="row">
       <div class="col-lg-12">
@@ -7,13 +7,13 @@
       </div>
     </div>
   </div>
-  <div class="article-thumbnail" style="margin-top:20px;">
-    <img src={{content.featuredMedia.code.originalUrl}} class="img-fluid" alt="">
+<div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
+<img [src]=getUrl(content.featuredMedia.code.thumbnail) class="img-fluid" alt="" >
     <p><b>Figure.</b>{{content.title}}</p>
   </div>
   <div class="row">
     <div class="col-lg-12">
-      <div class="article-content" [innerHTML]="content.content"></div>
+    <div class="article-content" [innerHTML]="content.content"></div>
     </div>
   </div>
 </div>
