added styles for preview page content

--- a/src/app/pages/preview/components/video-preview.component.html
+++ b/src/app/pages/preview/components/video-preview.component.html
@@ -10,7 +10,8 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="md-5 mt-5">
-        <dsod-video-player [content]="content.content"></dsod-video-player>
+        <video >
+        <source src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{content.featuredMedia.code.thumbnail}}"></video>
       </div>
     </div>
   </div>
