added essay and gallery template for preview page

--- a/src/app/pages/preview/components/article-preview.component.html
+++ b/src/app/pages/preview/components/article-preview.component.html
@@ -7,13 +7,34 @@
       </div>
     </div>
   </div>
-<div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
-<img [src]=getUrl(content.featuredMedia.code.thumbnail) class="img-fluid" alt="" >
+  <div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
+    <img [src]=getUrl(content.featuredMedia.code.thumbnail) class="img-fluid" alt="">
     <p><b>Figure.</b>{{content.title}}</p>
   </div>
   <div class="row">
     <div class="col-lg-12">
-    <div class="article-content" [innerHTML]="content.content"></div>
+      <div class="article-content" [innerHTML]="content.content"></div>
+    </div>
+  </div>
+  <div class="row" *ngFor="let essay of content.visualEssays">
+    <div class="col-lg-12" *ngIf="essay.visualEssayImages">
+      <dsod-essay-images-carousel [visualEssayImages]="essay.visualEssayImages"></dsod-essay-images-carousel>
+    </div>
+    <div class="col-lg-12">
+      <div class="article-content" [innerHTML]="content.content"></div>
+    </div>
+    <div class="col-lg-12">
+      <div class="row">
+        <div class="col-md-8">
+          <dsod-essay-author [essay]="essay"></dsod-essay-author>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <dsod-gallery [photosUrls]="content.photoUrls"></dsod-gallery>
     </div>
   </div>
 </div>
