--- a/src/app/pages/preview/components/content.scss
+++ b/src/app/pages/preview/components/content.scss
@@ -1,130 +1,140 @@
-@import 'variables';
+ @import 'variables';
 
-:host {
-  .video-content-inner {
-    /deep/ p {
-      font-size: 20px;
+ .article-content {
+   /deep/ p {
+     font-size: 20px;
 
-      &:nth-child(1) {
-        display: block;
-      }
+     >img {
+       width: 100%;
+       height: auto;
+     }
 
-      &:nth-child(4) {
+     &:nth-child(1) {
+       display: block;
+       font-size: 20px;
+       line-height: 35px;
+       margin-bottom: 25px;
 
-        color: $text-main;
-        font-size: 22px;
-        line-height: 35px;
-        margin-bottom: 25px;
+       &:first-letter {
+         float: left;
+         font-size: 60px;
+         line-height: 60px;
+         padding-top: 4px;
+         padding-right: 8px;
+         padding-left: 3px;
+       }
+     }
 
-        &:first-letter {
-          float: left;
-          font-size: 70px;
-          line-height: 60px;
-          padding-top: 4px;
-          padding-right: 8px;
-          padding-left: 3px;
-        }
+     &:nth-child(3) {
 
-      }
+       color: $text-main;
+       font-size: 20px;
+       line-height: 35px;
+       margin-bottom: 25px;
 
-      a {
-        color: #0066cc;
-        line-height: 35px;
-        font-size: 22px;
-      }
+       &:first-letter {
+         float: left;
+         font-size: 70px;
+         line-height: 60px;
+         padding-top: 4px;
+         padding-right: 8px;
+         padding-left: 3px;
+       }
+     }
 
-      &:last-child {
-        margin-bottom: 40px;
-      }
+     a {
+       color: #0066cc;
+       line-height: 35px;
+       font-size: 22px;
+     }
 
-    }
+     &:last-child {
+       margin-bottom: 40px;
+     }
 
+   }
 
-    /deep/ h2 {
-      font-size: 24px;
-      color: $color-primary;
+   /deep/ pre {
+     em {
+       font-size: 20px;
+     }
+   }
 
-      &:nth-of-type(2) {
-        font-weight: 700;
-        font-size: 22px;
-        color: $text-main;
-      }
-    }
+   /deep/ h2 {
+     font-size: 30px;
+     color: $color-primary;
 
-    >span {
-      display: block;
+     b,
+     strong {
+       font-weight: 500;
+     }
+   }
 
+   /deep/ figcaption {
+     font-size: 22px;
+   }
 
-    }
+   /deep/ ol {
+     padding: 0 0 0 60px;
+     margin-top: 30px;
 
-    /deep/ ul {
-      padding: 0 0 0 60px;
-      margin-top: 30px;
+     li {
+       position: relative;
+       color: $text-main;
+       font-size: 22px;
+       line-height: 35px;
+       padding: 0 50px 0 0;
+       margin-bottom: 25px;
+       list-style: disc;
 
-      li {
-        position: relative;
-        color: $text-main;
-        font-size: 20px;
-        line-height: 35px;
-        padding: 0 50px 0 0;
-        margin-bottom: 25px;
-        list-style: disc;
+       &::before {
+         display: inline-block;
+         font-size: 16px;
+         left: 0;
+         line-height: 26px;
+         position: absolute;
+         top: 0;
+         color: $color-primary;
+         font-size: 22px;
+         line-height: 35px;
+         font-weight: 700;
+       }
 
-        &::before {
-          // content: counter(li)".";
-          display: inline-block;
-          font-size: 16px;
-          left: 0;
-          line-height: 26px;
-          position: absolute;
-          top: 0;
-          color: $color-primary;
-          font-size: 22px;
-          line-height: 35px;
-          font-weight: 700;
-        }
+       i {
+         color: $color-primary;
+       }
+     }
+   }
 
-        i {
-          color: $color-primary;
-        }
-      }
-    }
+   /deep/ ul {
+     padding: 0 0 0 60px;
+     margin-top: 30px;
 
-    h5 {
-      margin-top: 25px;
-      margin-bottom: 25px;
-    }
+     li {
+       position: relative;
+       color: $text-main;
+       font-size: 22px;
+       line-height: 35px;
+       padding: 0 50px 0 0;
+       margin-bottom: 25px;
+       list-style: disc;
 
-    ul.references {
-      counter-reset: li;
-      list-style: none;
-      margin-bottom: 30px;
+       &::before {
+         display: inline-block;
+         font-size: 16px;
+         left: 0;
+         line-height: 26px;
+         position: absolute;
+         top: 0;
+         color: $color-primary;
+         font-size: 22px;
+         line-height: 35px;
+         font-weight: 700;
+       }
 
-      li {
-        list-style: none;
-        counter-increment: li;
-        position: relative;
-        color: $text-main;
-        font-size: 18px;
-        line-height: 25px;
-        padding: 0 50px;
-        margin-bottom: 10px;
-
-        &::before {
-          content: counter(li)".";
-          display: inline-block;
-          font-size: 18px;
-          left: 0;
-          line-height: 25px;
-          position: absolute;
-          top: 0;
-          color: $text-main;
-        }
-
-        i {
-          color: $color-primary;
-        }
-      }
-    }
-  }
-}
+       i {
+         color: $color-primary;
+       }
+     }
+   }
+ }
