--- a/src/app/pages/community/components/unite-magazine/unite-magazine.component.scss
+++ b/src/app/pages/community/components/unite-magazine/unite-magazine.component.scss
@@ -1,4 +1,4 @@
 .unite-mega-wrap {
-  background: url(../../../../../assets/images/pattern.png) repeat left top;
+  background: url('../../../../../assets/images/pattern.png') repeat left top;
   padding-bottom: 20px;
 }
