--- a/src/app/pages/article/containers/article-page/article.component.scss
+++ b/src/app/pages/article/containers/article-page/article.component.scss
@@ -1,3 +1,19 @@
 @import 'variables';
 
-.article-content {}
+.article-content {
+  p {
+    display: block;
+    font-size: 20px;
+    line-height: 35px;
+    margin-bottom: 25px;
+
+    &:first-letter {
+      float: left;
+      font-size: 60px;
+      line-height: 60px;
+      padding-top: 4px;
+      padding-right: 8px;
+      padding-left: 3px;
+    }
+  }
+}
