--- a/src/app/pages/video/containers/video-page/video-page.component.html
+++ b/src/app/pages/video/containers/video-page/video-page.component.html
@@ -23,6 +23,28 @@
           </div>
           <dsod-video-player [content]="(pageContent$ | async)?.content"></dsod-video-player>
           <dsod-video-content [content]="(pageContent$ | async)?.content"></dsod-video-content>
+          <div class="row" *ngFor="let essay of (pageContent$ | async)?.visualEssays">
+            <div class="col-lg-12" *ngIf="essay.visualEssayImages">
+              <dsod-essay-images-carousel [visualEssayImages]="essay.visualEssayImages"></dsod-essay-images-carousel>
+            </div>
+            <div class="col-lg-12">
+              <div class="article-content">
+                <p>{{essay.description}}</p>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="row">
+                <div class="col-md-8">
+                  <dsod-essay-author [essay]="essay"></dsod-essay-author>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <dsod-gallery [photosUrls]="(pageContent$ | async)?.photoUrls"></dsod-gallery>
+            </div>
+          </div>
         </div>
         <div class="related-content" *ngIf="(pageContent$ | async)?.relativeTopicList">
           <h2 class="section-title">Related Content</h2>
