--- a/src/app/pages/video/containers/video-page/video-page.component.scss
+++ b/src/app/pages/video/containers/video-page/video-page.component.scss
@@ -16,6 +16,24 @@
   }
 }
 
+.article-content {
+  p {
+    display: block;
+    font-size: 20px;
+    line-height: 35px;
+    margin-bottom: 25px;
+
+    &:first-letter {
+      float: left;
+      font-size: 60px;
+      line-height: 60px;
+      padding-top: 4px;
+      padding-right: 8px;
+      padding-left: 3px;
+    }
+  }
+}
+
 .video-content {
   .video-header {
     color: $text-main;
