--- a/src/app/shared/components/topic/topic.component.html
+++ b/src/app/shared/components/topic/topic.component.html
@@ -14,13 +14,21 @@
       </a>
     </div>
     <div class="topic-block-content">
-      <h2 class="topic-title-large mb-1" [ngClass]="{'topic-title-small':styleFor=='content-sm'}">{{topic.title}}</h2>
+      <h2 class="topic-title-large mb-1"
+        [ngClass]="{'topic-title-small':styleFor=='content-sm'}"
+        (click)="navigateTo($event)"
+      >{{topic.title}}</h2>
       <em *ngIf="topic.author">By&nbsp;{{topic.author.fullName}}
         <a role="button" class="read-about" *ngIf="!topic.featuredMedia" (click)="navigateTo(topic)">
-          <img *ngIf="topic.contentTypeName==='Articles'&& !topic.featuredMediaId" src="assets/images/article-icon.png"
-            alt="">
-          <img *ngIf="topic.contentTypeName==='Videos'" src="assets/images/youtube-icon.png" alt="">
-          <img *ngIf="topic.contentTypeName==='Podcasts'" src="assets/images/podcast-icon.png" alt="">
+          <img *ngIf="topic.contentTypeName==='Articles'&& !topic.featuredMediaId"
+            src="assets/images/article-icon.png" alt=""
+            (click)="navigateTo($event)">
+          <img *ngIf="topic.contentTypeName==='Videos'"
+            src="assets/images/youtube-icon.png" alt=""
+            (click)="navigateTo($event)">
+          <img *ngIf="topic.contentTypeName==='Podcasts'"
+            src="assets/images/podcast-icon.png" alt=""
+            (click)="navigateTo($event)">
         </a> </em>
       <div #contentDiv class="excrept-content-lg" [ngClass]="{'excrept-content-sm':styleFor=='content-sm'}" [innerHTML]="topic.excerpt">
       </div>
