--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -12,27 +12,24 @@
 }
 .nav-wrapper {
   background: rgba(0, 0, 0, 0.5);
-  padding: 18px 47px;
+  padding: 10px 40px;
   position: fixed;
   z-index: 10;
   top: 0;
   left: 0;
   margin: 0 auto;
   width: 100%;
+  min-height: 96px;
   transition: 0.3s ease all;
-
   nav.navbar {
     padding: 0.5rem 0;
-
     ul.navbar-nav {
       margin: 10px 0px;
-
       li.nav-item {
         border-right: 1px solid $color-white;
         align-items: center;
         display: flex;
         position: relative;
-
         a.nav-link {
           color: $color-white !important;
           border-bottom: 1px solid transparent;
@@ -40,21 +37,19 @@
           margin: 0 20px;
           font-size: 22px;
           display: block;
-
+          white-space: nowrap;
+          overflow: hidden;
           &:hover {
             border-bottom: 1px solid $color-white;
           }
-
           &.active {
             border-bottom: 1px solid $color-white;
             padding: 0;
           }
         }
-
         &:last-child {
           border-right: none;
         }
-
         &.login-wrap {
           a.nav-link {
             background: $black;
@@ -69,20 +64,17 @@
               padding: 0;
             }
           }
-
           .avatar-wrap {
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 0 0.5rem;
             cursor: pointer;
-
             .avatar {
-              width: 50px;
-              height: 50px;
+              width: 40px;
+              height: 40px;
               border-radius: 50%
             }
-
             .user-name {
               display: flex;
               flex-direction: column;
@@ -91,20 +83,16 @@
               padding: 0 10px;
             }
           }
-
           .logged-in-dropdown {
             background-color: rgba(0, 0, 0, 0.5);
-
             .dropdown-item {
               color: $color-white;
-
               &:hover {
                 background-color: rgba(255, 255, 255, 0.2);
               }
             }
           }
         }
-
         &.sub-menu-parent {
           li {
             a {
@@ -114,7 +102,6 @@
               display: block;
               transition: 0.2s all ease;
               line-height: 20px;
-
               &:hover {
                 background: $color-primary;
                 color: $color-white;
@@ -122,14 +109,12 @@
             }
           }
         }
-
         .search-area {
           margin: 0 20px;
           display: flex;
           justify-content: flex-start;
           align-items: center;
           flex-direction: row-reverse;
-
           .nav-link {
             background: $black;
             padding: 5px 10px;
@@ -141,7 +126,6 @@
           }
         }
       }
-
       .li-hidden {
         width: 44px;
         overflow: hidden;
@@ -149,7 +133,6 @@
         -webkit-transition: width 0.5s;
         -moz-transition: width 0.5s;
       }
-
       .li-open {
         overflow: visible;
         width: 250px;
@@ -159,12 +142,10 @@
       }
     }
   }
-
   .brand {
     text-align: left;
-    padding-right: 15px;
+    // padding-right: 15px;
     padding-top: 10px;
-
     img {
       max-width: 100%;
     }
@@ -187,18 +168,12 @@
 }
 
 @media only screen and (max-width:1600px) {
-  .nav-wrapper[_ngcontent-c1] {
-    padding: 8px 10px;
-  }
-
   .nav-wrapper {
-    padding: 18px 10px;
-
     nav.navbar {
       ul.navbar-nav {
         li.nav-item.login-wrap {
           a.nav-link {
-            font-size: 20px;
+            font-size: 19px;
             padding: 6px 20px;
           }
         }
@@ -207,12 +182,9 @@
   }
 }
 
-
 .bg-dark-scroll {
   background: rgba(0, 0, 0, 0.95);
 }
-
-
 li.sub-menu-child>a::after {
   content: "\f0da";
   font-family: "FontAwesome";
@@ -223,15 +195,12 @@ li.sub-menu-child>a::after {
   top: 50%;
   transform: translateY(-50%);
 }
-
 li.sub-menu-child>a:hover::after {
   color: $color-white;
 }
-
 .sub-menu-parent {
   position: relative;
 }
-
 .sub-menu,
 .sub-menu-nested {
   visibility: hidden;
@@ -247,11 +216,9 @@ li.sub-menu-child>a:hover::after {
   border: 1px solid $text-main;
   min-width: 180px;
 }
-
 .sub-menu-child {
   position: relative;
 }
-
 .sub-menu-parent:hover .sub-menu,
 .sub-menu-child:hover .sub-menu-nested {
   visibility: visible;
@@ -260,7 +227,6 @@ li.sub-menu-child>a:hover::after {
   transform: translateY(0%);
   transition-delay: 0s, 0s, 0.3s;
 }
-
 .sub-menu-nested {
   left: 100%;
   top: 0;
