--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -4,7 +4,7 @@ footer {
   background: $emulsion-grey;
   padding: 64px 0 20px;
   position: relative;
-  // margin-top: 52px;
+  min-height: 263px;
 
   .ftr-logo {
     p {
