--- a/src/app/pages/community/components/community/community.component.html
+++ b/src/app/pages/community/components/community/community.component.html
@@ -1,3 +1,9 @@
 <div>
   <div class="image-header-container"></div>
 </div>
+<div class="content-wrapper">
+  <div class="content-item-wrapper">
+    <div class="title">Related Content</div>
+    <div class="content-item-body"></div>
+  </div>
+</div>
