--- a/src/app/pages/education/components/education/education.component.html
+++ b/src/app/pages/education/components/education/education.component.html
@@ -1,4 +1,13 @@
 <div>
   <div class="image-header-container"></div>
 </div>
-<router-outlet></router-outlet>
+<div class="content-wrapper">
+  <div class="content-item-wrapper">
+    <div class="title">Treding Topics</div>
+    <div class="content-item-body"></div>
+  </div>
+  <div class="content-item-wrapper">
+    <div class="title">Ad Banner Section</div>
+    <div class="content-item-body"></div>
+  </div>
+</div>
