--- a/src/app/pages/development/components/development/development.component.scss
+++ b/src/app/pages/development/components/development/development.component.scss
@@ -8,3 +8,17 @@
   width: 60%;
   margin: auto;
 }
+.content-wrapper {
+  width: 60%;
+  margin: auto;
+  padding: 30px;
+  .content-item-wrapper {
+    height: 200px;
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    flex-direction: column;
+  }
+}
