- fixed empty sections and image carousel

--- a/src/app/pages/education/components/education/education.component.html
+++ b/src/app/pages/education/components/education/education.component.html
@@ -3,11 +3,7 @@
 </div>
 <div class="content-wrapper">
   <div class="content-item-wrapper">
-    <div class="title">Treding Topics</div>
-    <div class="content-item-body"></div>
-  </div>
-  <div class="content-item-wrapper">
-    <div class="title">Ad Banner Section</div>
+    <div class="title">Coming Soon...</div>
     <div class="content-item-body"></div>
   </div>
 </div>
